# megatools

./: Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac
docs/: footer.txt  megacopy.1  megacopy.txt  megadf.1  megadl.1  megadl.txt  megafs.1  megaget.1  megaget.txt  megals.1  megals.txt  megamkdir.1  megamkdir.txt  megaput.1  megaput.txt  megarc.5  megarc.txt  megareg.1  megareg.txt  megarm.1  megarm.txt  megatools.7  megatools.txt  shared-options.txt
libtools/: alloc.h  http.c  http.h  oldmega.c  oldmega.h  tools.c  tools.h
mega/: mega-aes-ctr-encryptor.c  mega-aes-ctr-encryptor.h  mega-aes-key.c  mega-aes-key.h  mega-chunked-cbc-mac.c  mega-chunked-cbc-mac.h  mega-enum-types.c  mega-enum-types.h  mega-marshal.c  mega-marshal.h  mega-rsa-key.c  mega-rsa-key.h  mega.h  utils.c  utils.h
tests/: test-aes.c  test-bindings.js  test-bindings.lua  test-bindings.py  test-bindings.rb  test-rsa.c  test-server.js
tools/: copy.c  df.c  dl.c  fs.c  get.c  ls.c  mkdir.c  put.c  reg.c  rm.c
